--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGOURL=mongodb+srv://admin:buihaiyen@video-idea-hiuts.gcp.mongodb.net/shoes?retryWrites=true&w=majority
+googleClientID=1051860312273-ebj360ccablhc4mjg9ce14utvf1ril6g.apps.googleusercontent.com
+googleClientSecret=TjQA_b5lMJLflCNQz52PIxgf
