--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,9 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
+    "engines": {
+        "node": "10.15.3"
+    },
     "eslintConfig": {
         "extends": "react-app"
     },
