filler price and type

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGOURL=mongodb+srv://admin:buihaiyen@video-idea-hiuts.gcp.mongodb.net/shoes?re
 googleClientID=1051860312273-ebj360ccablhc4mjg9ce14utvf1ril6g.apps.googleusercontent.com
 googleClientSecret=TjQA_b5lMJLflCNQz52PIxgf
 secretOrKey=secret
+CLOUD_NAME=hoangdai09081995
+API_KEY=691875312152981
+API_SECRET=Ydo8CTYV89UUHMT435hXAsxsuks
