--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
         "axios": "^0.19.0",
         "bootstrap": "^4.3.1",
         "jwt-decode": "^2.2.0",
+        "moment": "^2.24.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-dropzone": "^10.1.5",
         "react-images": "^0.5.17",
+        "react-moment": "^0.9.2",
         "react-redux": "^7.1.0",
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.0.1",
