--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,12 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
 /node_modules
-
-# testing
-/coverage
-
-# production
 /build
+/client/node_modules
 
-# misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 .env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
+package-lock.json
